# copier-ProjectScaffolding

./: .copier-answers.yml  .gitignore  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.txt  MAINTAINERS.md  README.md  SECURITY.md  copier.yml  pyproject.toml  requirements.txt
.github/: release_sources.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/actions/publish_impl/: action.yml
.github/workflows/: codeql.yml  standard.yaml
Docker/: Build.py  Dockerfile
Docker/ImageContent/: copier_script
extensions/: context.py  escaper.py  exception.py  slugify.py
includes/: documentation.yaml  git.yaml  github.yaml  python_package.yaml
template/: AutoGitSemVer.yaml  post_generation_actions.html  {{_copier_conf.answers_file}}
template/__documentation/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  __postprocess.py  __preprocess.py
template/__documentation/__licenses/: Apache-2.0_LICENSE.txt  BSD-3-Clause-Clear_LICENSE.txt  BSL-1.0_LICENSE.txt  GPL-3.0-or-later_LICENSE.txt  MIT_LICENSE.txt
template/__hosting_platform/: __postprocess.py  __preprocess.py
template/__hosting_platform/__GitHub/: __postprocess.py  __preprocess.py
template/__hosting_platform/__GitHub/.github/: CODEOWNERS  pull_request_template.md
template/__hosting_platform/__GitHub/.github/ISSUE_TEMPLATE/: bug_report.md
template/__hosting_platform/__None/: __preprocess.py
template/__post_generation_actions/: __postprocess.py  __preprocess.py  post_generation_actions.html
template/__project_type/: __postprocess.py  __preprocess.py
template/__project_type/__None/: __preprocess.py
template/__project_type/__PythonExecutionEnvironment/: BootstrapEpilog.py  __postprocess.py  __preprocess.py  requirements.txt
template/__project_type/__PythonPackage/: BootstrapEpilog.py  Build.py  __preprocess.py  pyproject.toml
template/__project_type/__PythonPackage/src/: AutoGitSemVer.yaml  BuildBinary.py
template/__project_type/__PythonPackage/src/{{ python_package_pypi_name }}/: EntryPoint.py  Math.py  __init__.py
template/__project_type/__PythonPackage/tests/: EntryPoint_UnitTest.py  Math_UnitTest.py
template/__project_type/__PythonPackage/{% if python_package_generate_ci %}.github{% endif %}/: release_sources.yaml
template/__project_type/__PythonPackage/{% if python_package_generate_ci %}.github{% endif %}/workflows/: codeql.yml  standard.yml
template/__repository_tool/: __postprocess.py  __preprocess.py
template/__repository_tool/__None/: __preprocess.py
template/__repository_tool/__git/: .gitignore  __postprocess.py  __preprocess.py
template/__tools/: Cleanup.py  CopierHelpers.py
template/__tools/__python_bootstrapper/: __preprocess.py
tests/: All_EndToEndTest.py  CopierHelpers_UnitTest.py  Documentation_EndToEndTest.py  GenerateTemplates.py  HostingPlatform_EndToEndTest.py  PostGenerateActions_EndToEndTest.py  ProjectType_EndToEndTest.py  RepositoryTool_EndToEndTest.py  TestHelpers.py
tests/__snapshots__/: All_EndToEndTest.ambr  Documentation_EndToEndTest.ambr  HostingPlatform_EndToEndTest.ambr  ProjectType_EndToEndTest.ambr
